@@ -135,6 +135,10 @@ message RMStateVersionProto {
   optional int32 minor_version = 2;
 }
 
+message EpochProto {
+  optional int64 epoch = 1;
+}
+
 //////////////////////////////////////////////////////////////////
 ///////////// RM Failover related records ////////////////////////
 //////////////////////////////////////////////////////////////////
